migrate to JDK 16 and fully reactive stack for market-service